fix .main-nav__sub-wrap
fix: width, padding

--- a/css/style.css
+++ b/css/style.css
@@ -226,21 +226,25 @@ a{
 
 .main-nav__search-input:active{
     border-bottom: 2px solid black;
+    transition: 0.3s;
 }
 
 .main-nav__search-input:focus{
     border-bottom: 2px solid black;
+    transition: 0.3s;
 }
 
 
 .main-nav__search-input:focus ~ .main-nav__search-label::before {
     display: block;
+    transition: 0.3s;
 }
 
 .main-nav__search-input:focus ~ .main-nav__search-btn {
     z-index: 0;
 
     opacity: 1;
+    transition: 0.3s;
 }
 
 .main-nav__search-btn{
@@ -375,6 +379,7 @@ a{
 
 .main-nav__link:hover{
     opacity: 0.5;
+    transition: 0.3s;
 }
 
 .main-nav__link:active{
@@ -415,15 +420,14 @@ a{
 
 .main-nav__sub-wrap{
     position: absolute;
-    top: 22px;
-    left: -20px;
+    top: 100px;
+    left: 0;
     z-index: 2;
 
     display: none;
     opacity: 0;
-    width: 1160px;
-    padding-top: 26px;
-    padding-bottom: 34px;
+    width: 1100px;
+    padding-top: 20px;
     padding-left: 60px;
 
     background-color: #f7e296;
